--- a/html/usuarios.html
+++ b/html/usuarios.html
@@ -8,7 +8,41 @@
     <title>Usuarios</title>
 </head>
 <body>
-    <div class="col-9 px-5">
+    <nav class="navbar bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand">Bienvenido a IguanaDigitalAdmin</a>
+          <form class="d-flex" role="search">
+            <!-- <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"> -->
+            <button class="btn btn-outline-success" type="button">Crear Usuario</button>
+          </form>
+        </div>
+      </nav>
+    <!-- <button type="button" class="btn btn-success">Success</button> -->
+
+    <!-- Modal Crear Usuario -->
+
+    <!-- Modal Buttons -->
+    <button class="modal-open" data-modal="modalCrearUsuario">Modal Crear Usuario</button>
+    <button class="modal-open" data-modal="modalEditarUsuario">Modal Editar Usuario</button>
+    <button class="modal-open" data-modal="modalEliminarUsuario">Modal Eliminar Usuario</button>
+    
+    <!-- Modals -->
+    <div class="modals" id="modalCrearUsuario">
+        <div class="modal-content">
+            <div class="modal-header">
+                Modal 1
+                <button class="icon">
+                    <i class="material-icons">close</i>
+                </button>
+            </div>
+            <div class="modal-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum eum, dolorem iusto architecto necessitatibus mollitia cupiditate, autem sit doloremque maxime quod rem incidunt, voluptas ratione nesciunt dolorum ipsam beatae reiciendis!</div>
+            <div class="modal-footer">
+                <button class="link modal-close">Close Modal</button>
+            </div>
+        </div>
+    </div>
+
+    <!-- <div class="col-9 px-5">
         <div class="table-responsive py-2">
             <h1>Lista de Usuarios</h1>
             <table class="table table-striped table-hover">
@@ -43,7 +77,7 @@
                 </tbody>
             </table>
         </div>
-    </div>
+    </div> -->
 
 </body>
 </html>
