--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <input type="password" id="PasswordTxt" name="Password"/><br>
 
         <!-- Button Login -->
-        <input type="submit" id="Login" name="Login" value="Iniciar Sesion" onclick="login()"/>
+        <input type="submit" id="Login" name="Login" value="Iniciar Sesion"/>
     </form>
     
 
