--- a/html/usuarios.html
+++ b/html/usuarios.html
@@ -42,7 +42,7 @@
         </div>
     </div>
 
-    <!-- <div class="col-9 px-5">
+    <div class="col-9 px-5">
         <div class="table-responsive py-2">
             <h1>Lista de Usuarios</h1>
             <table class="table table-striped table-hover">
@@ -77,7 +77,7 @@
                 </tbody>
             </table>
         </div>
-    </div> -->
+    </div>
 
 </body>
 </html>
