login.js funciona correctamente!

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+    <span id="error"></span>
    
     <form>
         <h1>Login</h1>
@@ -24,7 +25,7 @@
         <input type="password" id="PasswordTxt" name="Password"/><br>
 
         <!-- Button Login -->
-        <input type="submit" id="Login" name="Login" value="Iniciar Sesion"/>
+        <input type="submit" id="Login" name="Login" value="Iniciar Sesion" onclick="loginAPI()"/>
     </form>
     
 
