se agrega el consumo/formularios para crear usuario, actualizar y eliminar usuario

--- a/html/usuarios.html
+++ b/html/usuarios.html
@@ -68,7 +68,8 @@
 <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
 <!-- <script src="http://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script> -->
 <script src="..\js\usuarios.js"></script>
-<!-- <script src="..\js\eliminar.js"></script> -->
+<script src="..\js\eliminar.js"></script>
+<script src="..\js\actualizar.js"></script>
 
 </body>
 </html>
